--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
 
             Release pushed by: @${{ github.triggering_actor }}.
             Build ID (click to see changes): ${{ github.sha }}
-          prerelease: true
+          prerelease: false
           tag_name: autobuild_${{ github.sha }}
           name: ${{ github.event.head_commit.message }}
           token: ${{ secrets.token }}
